<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/register"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_new_user" />

        <item
            android:id="@+id/show"
            android:icon="@drawable/ic_import_contacts_black_24dp"
            android:title="@string/menu_consultar" />

        <item
            android:id="@+id/event"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/menu_new_event" />

        <item
            android:id="@+id/my_request"
            android:icon="@drawable/ic_insert_drive_file_black_24dp"
            android:title="@string/menu_mis_consultas" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_new_galery" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
