<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RellenarFormularioInsertar">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_formulario"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="59dp">

                    <EditText
                        android:id="@+id/editTextNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/Name"
                        android:inputType="textCapWords" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editTextLugar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Place"
                            android:layout_marginLeft="5dp"
                           />

                 </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/editTextQueja"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Queja"
                            android:layout_marginLeft="5dp"
                            android:maxLength="150"
                            android:inputType="textMultiLine"
                            android:lines="5"


                            />

                </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Picture"
        android:layout_margin="10dp"
       />
    <ImageView
        android:id="@+id/picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/ic_menu_camera"
        android:layout_marginLeft="10dp"/>

    <Button
        android:id="@+id/button_captura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captura"
        android:layout_marginLeft="10dp"/>


   </LinearLayout>
 </LinearLayout>
</android.support.design.widget.CoordinatorLayout>