<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/idLayoutRegistrar"
    android:background="@drawable/gradient"
    tools:context="com.example.pedro.proyecto_pgl_2018.MenuPrincipalUsuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="REGISTRAR USUARIOS"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        </LinearLayout>

        <EditText
            android:id="@+id/registrar_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Registrar_nombre"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/registrar_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Registrar_password"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:textSize="18dp"
            />

        <EditText
            android:id="@+id/registrar_apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Registrar_apellidos"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Registrar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white" />


</RelativeLayout>
